; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_alias.c_decl_for_component_ref.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_alias.c_decl_for_component_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPONENT_REF = common dso_local global i64 0, align 8
@NULL_TREE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @decl_for_component_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @decl_for_component_ref(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  br label %3

3:                                                ; preds = %14, %1
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @TREE_OPERAND(i64 %4, i32 0)
  store i64 %5, i64* %2, align 8
  br label %6

6:                                                ; preds = %3
  %7 = load i64, i64* %2, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = load i64, i64* %2, align 8
  %11 = call i64 @TREE_CODE(i64 %10)
  %12 = load i64, i64* @COMPONENT_REF, align 8
  %13 = icmp eq i64 %11, %12
  br label %14

14:                                               ; preds = %9, %6
  %15 = phi i1 [ false, %6 ], [ %13, %9 ]
  br i1 %15, label %3, label %16

16:                                               ; preds = %14
  %17 = load i64, i64* %2, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %16
  %20 = load i64, i64* %2, align 8
  %21 = call i64 @DECL_P(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* %2, align 8
  br label %27

25:                                               ; preds = %19, %16
  %26 = load i64, i64* @NULL_TREE, align 8
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i64 [ %24, %23 ], [ %26, %25 ]
  ret i64 %28
}

declare dso_local i64 @TREE_OPERAND(i64, i32) #1

declare dso_local i64 @TREE_CODE(i64) #1

declare dso_local i64 @DECL_P(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
